bin reddy + src

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = "is.ru.tictactoe.TicTacToe"
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -28,3 +31,10 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
+/*
+jar {
+￼manifest {
+        attributes("Main-Class": "is.ru.tictactoe.TicTacToe")
+        }
+}
+*/
