TicTacToeGam main + build.gradle ready

--- a/build.gradle
+++ b/build.gradle
@@ -11,13 +11,14 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = "is.ru.tictactoe.TicTacToe"
+mainClassName = "is.ru.tictactoe.TicTacToeGame"
 
-/*jar {
-￼manifest {
-        attributes("Main-Class": "is.ru.tictactoe.TicTacToe")
-        }
-} */
+jar {
+	manifest {
+		attributes("Main-Class": "is.ru.tictactoe.TicTacToeGame")
+	}
+}
+
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -37,3 +38,4 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
+
